--- a/fswd/package.json
+++ b/fswd/package.json
@@ -1,4 +1,4 @@
-{
+.{
   "name": "fswd",
   "version": "0.1.0",
   "private": true,
@@ -38,7 +38,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
