--- a/fswd/package.json
+++ b/fswd/package.json
@@ -38,7 +38,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js"
+    "build": "echo \"No build specified\" && exit 1",
+       "test": "echo \"No test specified\" && exit 1",
+        "start": "node server.js"
    
   },
   "eslintConfig": {
