--- a/fswd/package.json
+++ b/fswd/package.json
@@ -38,9 +38,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "echo \"No build specified\" && exit 1",
-       "test": "echo \"No test specified\" && exit 1",
-        "start": "node server.js"
+ "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "nodemon ./src/server.js"
    
   },
   "eslintConfig": {
